# CBT

./: .gitignore  README.md  requirements.txt
backend/: alembic.ini  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  schema.py
backend/app/model/: mixins.py  person.py  role.py  user_role.py  users.py
backend/app/service/: auth_service.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: 023cfdf180da_add_initial_tables.py  ef45626cff8d_initial_migration.py
env/Scripts/: activate  activate.bat
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/form/: Forgot.js  Login.js  Register.js
